# cpp-course

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ip_filter.cpp  ip_filter.h  lib.cpp  main.cpp  test_version.cpp  tests.cpp
.github/workflows/: release.yml
docs/: 1.md  2.md  3.md  6.md  OLD_CMAKELISTS.md
